WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14428
FCKEditor: Images disappear on drag/drop and copy/paste
https://bugs.webkit.org/show_bug.cgi?id=14428
Summary
FCKEditor: Images disappear on drag/drop and copy/paste
Justin Garcia
Reported
2007-06-27 04:05:59 PDT
Goto
http://www.fckeditor.net/nightly/browsers_test.html
Insert a smiley. Drag and drop it somewhere in the document. It disappears.
Attachments
proposed fix
(4.88 KB, patch)
2007-12-29 07:08 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
webkit
Comment 1
2007-09-22 03:51:42 PDT
This bug is reproducible on Mac only. It doesn't happen on Windows.
Mark Rowe (bdash)
Comment 2
2007-11-22 09:40:46 PST
<
rdar://problem/5610794
>
webkit
Comment 3
2007-11-22 09:42:08 PST
As of FCKeditor 2.5 Beta, this one can be tested at
http://www.fckeditor.net/demo
.
Alexey Proskuryakov
Comment 4
2007-11-22 09:43:30 PST
http://dev.fckeditor.net/ticket/566
webkit
Comment 5
2007-11-28 04:18:28 PST
Marking this bug as critical for FCKeditor.
Justin Garcia
Comment 6
2007-12-06 13:29:55 PST
Regressed in
r21110
.
Alexey Proskuryakov
Comment 7
2007-12-29 07:06:20 PST
The problem here is that we don't properly re-create fragments from web archives that have frames with about:blank URLs. I'm working on a fix. I think that a workaround for FCKEditor would be to use complete URLs for smileys (currently, absolute ones such as "/fckeditor/editor/images/smiley/msn/regular_smile.gif" are used).
Alexey Proskuryakov
Comment 8
2007-12-29 07:08:45 PST
Created
attachment 18169
[details]
proposed fix
Darin Adler
Comment 9
2007-12-29 14:05:33 PST
Comment on
attachment 18169
[details]
proposed fix Seems OK. Maybe there's a more elegant way for us to make sure that "about:blank" is not treated as a base URL, but I can't think of anything off hand. r=me
Alexey Proskuryakov
Comment 10
2007-12-29 22:15:15 PST
Committed revision 29034.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug