        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=14428
        FCKEditor: Images disappear on drag/drop and copy/paste

        Test: editing/pasteboard/drag-image-in-about-blank-frame.html

        * editing/markup.cpp: (WebCore::createFragmentFromMarkup): Don't use "about:blank" as a
        base URL, just like we don't use an empty one.



Canonical link: https://commits.webkit.org/22873@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29034 268f45cc-cd09-0410-ab3c-d52691b4dbfc